istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: colors
  namespace: default
#  resourceVersion: "973245"
spec:
  gateways:
  - colors
  hosts:
  - colors.demo4591.codefresh.io
  http:
  - route:
    - destination:
        host: colors-master-5cc491a
        port:
          number: 80
      weight: 100
---
